--- a/app/src/main/res/layout/activity_section_f9_s6.xml
+++ b/app/src/main/res/layout/activity_section_f9_s6.xml
@@ -79,12 +79,16 @@
                             android:id="@+id/f9601a"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:checked="@{form.f9601.equals(`1`)}"
+                            android:onClick="@{()->form.setF9601(`1`)}"
                             android:text="@string/f9601a" />
 
                         <RadioButton
                             android:id="@+id/f9601b"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:checked="@{form.f9601.equals(`2`)}"
+                            android:onClick="@{()->form.setF9601(`2`)}"
                             android:text="@string/f9601b" />
                     </RadioGroup>
                 </LinearLayout>
@@ -130,42 +134,56 @@
                             android:id="@+id/f9602a"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:checked="@{form.f9602a.equals(`1`)}"
+                            android:onClick="@{()->form.setF9602a(form.f9602a.equals(`1`)?``:`1`)}"
                             android:text="@string/f9602a" />
 
                         <CheckBox
                             android:id="@+id/f9602b"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:checked="@{form.f9602b.equals(`2`)}"
+                            android:onClick="@{()->form.setF9602b(form.f9602b.equals(`2`)?``:`2`)}"
                             android:text="@string/f9602b" />
 
                         <CheckBox
                             android:id="@+id/f9602c"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:checked="@{form.f9602c.equals(`3`)}"
+                            android:onClick="@{()->form.setF9602c(form.f9602c.equals(`3`)?``:`3`)}"
                             android:text="@string/f9602c" />
 
                         <CheckBox
                             android:id="@+id/f9602d"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:checked="@{form.f9602d.equals(`4`)}"
+                            android:onClick="@{()->form.setF9602d(form.f9602d.equals(`4`)?``:`4`)}"
                             android:text="@string/f9602d" />
 
                         <CheckBox
                             android:id="@+id/f9602e"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:checked="@{form.f9602e.equals(`5`)}"
+                            android:onClick="@{()->form.setF9602e(form.f9602e.equals(`5`)?``:`5`)}"
                             android:text="@string/f9602e" />
 
                         <CheckBox
                             android:id="@+id/f9602f"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:checked="@{form.f9602f.equals(`6`)}"
+                            android:onClick="@{()->form.setF9602f(form.f9602f.equals(`6`)?``:`6`)}"
                             android:text="@string/f9602f" />
 
                         <CheckBox
                             android:id="@+id/f960296"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:checked="@{form.f960296.equals(`96`)}"
+                            android:onClick="@{()->form.setF960296(form.f960296.equals(`96`)?``:`96`)}"
                             android:text="@string/f960296" />
 
                         <EditText
@@ -175,7 +193,7 @@
                             android:digits="AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWwXxYyZz0123456789,. "
                             android:hint="@string/f960296"
                             android:tag="f960296"
-                            android:text='@{f960296.checked ? f960296x.getText().toString() : ""}'
+                            android:text="@={form.f960296x}"
                             android:visibility='@{f960296.checked? View.VISIBLE : View.GONE}' />
                     </LinearLayout>
                 </LinearLayout>
@@ -217,9 +235,11 @@
                         android:hint="@string/f9603"
                         android:inputType="number"
                         android:maxLength="3"
-                        app:maxValue="100"
-                        app:minValue="1"
+                        android:text="@={form.f9603}"
 
+
+                        app:minValue="1"
+                        app:maxValue="100"
                         app:type="range" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
@@ -251,9 +271,11 @@
                         android:hint="@string/f9604d"
                         android:inputType="number"
                         android:maxLength="3"
-                        app:maxValue="100"
-                        app:minValue="1"
+                        android:text="@={form.f9604d}"
 
+
+                        app:minValue="1"
+                        app:maxValue="100"
                         app:type="range" />
 
                     <TextView
@@ -268,9 +290,11 @@
                         android:hint="@string/f9604h"
                         android:inputType="number"
                         android:maxLength="3"
-                        app:maxValue="100"
-                        app:minValue="1"
+                        android:text="@={form.f9604h}"
 
+
+                        app:minValue="1"
+                        app:maxValue="100"
                         app:type="range" />
 
                     <TextView
@@ -285,9 +309,11 @@
                         android:hint="@string/f9604m"
                         android:inputType="number"
                         android:maxLength="3"
-                        app:maxValue="100"
-                        app:minValue="1"
+                        android:text="@={form.f9604m}"
 
+
+                        app:minValue="1"
+                        app:maxValue="100"
                         app:type="range" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
@@ -330,12 +356,16 @@
                             android:id="@+id/f9605a"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:checked="@{form.f9605.equals(`1`)}"
+                            android:onClick="@{()->form.setF9605(`1`)}"
                             android:text="@string/f9605a" />
 
                         <RadioButton
                             android:id="@+id/f9605b"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:checked="@{form.f9605.equals(`2`)}"
+                            android:onClick="@{()->form.setF9605(`2`)}"
                             android:text="@string/f9605b" />
                     </RadioGroup>
                 </LinearLayout>
@@ -381,30 +411,40 @@
                             android:id="@+id/f9606a"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:checked="@{form.f9606a.equals(`1`)}"
+                            android:onClick="@{()->form.setF9606a(form.f9606a.equals(`1`)?``:`1`)}"
                             android:text="@string/f9606a" />
 
                         <CheckBox
                             android:id="@+id/f9606b"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:checked="@{form.f9606b.equals(`2`)}"
+                            android:onClick="@{()->form.setF9606b(form.f9606b.equals(`2`)?``:`2`)}"
                             android:text="@string/f9606b" />
 
                         <CheckBox
                             android:id="@+id/f9606c"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:checked="@{form.f9606c.equals(`3`)}"
+                            android:onClick="@{()->form.setF9606c(form.f9606c.equals(`3`)?``:`3`)}"
                             android:text="@string/f9606c" />
 
                         <CheckBox
                             android:id="@+id/f9606d"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:checked="@{form.f9606d.equals(`4`)}"
+                            android:onClick="@{()->form.setF9606d(form.f9606d.equals(`4`)?``:`4`)}"
                             android:text="@string/f9606d" />
 
                         <CheckBox
                             android:id="@+id/f960696"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:checked="@{form.f960696.equals(`96`)}"
+                            android:onClick="@{()->form.setF960696(form.f960696.equals(`96`)?``:`96`)}"
                             android:text="@string/f960696" />
 
                         <EditText
@@ -414,7 +454,7 @@
                             android:digits="AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWwXxYyZz0123456789,. "
                             android:hint="@string/f960696"
                             android:tag="f960696"
-                            android:text='@{f960696.checked ? f960696x.getText().toString() : ""}'
+                            android:text="@={form.f960696x}"
                             android:visibility='@{f960696.checked? View.VISIBLE : View.GONE}' />
                     </LinearLayout>
                 </LinearLayout>
@@ -458,12 +498,16 @@
                             android:id="@+id/f9607a"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:checked="@{form.f9607.equals(`1`)}"
+                            android:onClick="@{()->form.setF9607(`1`)}"
                             android:text="@string/f9607a" />
 
                         <RadioButton
                             android:id="@+id/f9607b"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:checked="@{form.f9607.equals(`2`)}"
+                            android:onClick="@{()->form.setF9607(`2`)}"
                             android:text="@string/f9607b" />
                     </RadioGroup>
                 </LinearLayout>
@@ -502,7 +546,8 @@
                         android:id="@+id/f9608"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="@string/f9608" />
+                        android:hint="@string/f9608"
+                        android:text="@={form.f9608}" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
@@ -544,12 +589,16 @@
                             android:id="@+id/f9609a"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:checked="@{form.f9609.equals(`1`)}"
+                            android:onClick="@{()->form.setF9609(`1`)}"
                             android:text="@string/f9609a" />
 
                         <RadioButton
                             android:id="@+id/f9609b"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:checked="@{form.f9609.equals(`2`)}"
+                            android:onClick="@{()->form.setF9609(`2`)}"
                             android:text="@string/f9609b" />
                     </RadioGroup>
                 </LinearLayout>
@@ -595,42 +644,56 @@
                             android:id="@+id/f9610a"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:checked="@{form.f9610a.equals(`1`)}"
+                            android:onClick="@{()->form.setF9610a(form.f9610a.equals(`1`)?``:`1`)}"
                             android:text="@string/f9610a" />
 
                         <CheckBox
                             android:id="@+id/f9610b"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:checked="@{form.f9610b.equals(`2`)}"
+                            android:onClick="@{()->form.setF9610b(form.f9610b.equals(`2`)?``:`2`)}"
                             android:text="@string/f9610b" />
 
                         <CheckBox
                             android:id="@+id/f9610c"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:checked="@{form.f9610c.equals(`3`)}"
+                            android:onClick="@{()->form.setF9610c(form.f9610c.equals(`3`)?``:`3`)}"
                             android:text="@string/f9610c" />
 
                         <CheckBox
                             android:id="@+id/f9610d"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:checked="@{form.f9610d.equals(`4`)}"
+                            android:onClick="@{()->form.setF9610d(form.f9610d.equals(`4`)?``:`4`)}"
                             android:text="@string/f9610d" />
 
                         <CheckBox
                             android:id="@+id/f9610e"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:checked="@{form.f9610e.equals(`5`)}"
+                            android:onClick="@{()->form.setF9610e(form.f9610e.equals(`5`)?``:`5`)}"
                             android:text="@string/f9610e" />
 
                         <CheckBox
                             android:id="@+id/f9610f"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:checked="@{form.f9610f.equals(`6`)}"
+                            android:onClick="@{()->form.setF9610f(form.f9610f.equals(`6`)?``:`6`)}"
                             android:text="@string/f9610f" />
 
                         <CheckBox
                             android:id="@+id/f961096"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:checked="@{form.f961096.equals(`96`)}"
+                            android:onClick="@{()->form.setF961096(form.f961096.equals(`96`)?``:`96`)}"
                             android:text="@string/f961096" />
 
                         <EditText
@@ -640,7 +703,7 @@
                             android:digits="AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWwXxYyZz0123456789,. "
                             android:hint="@string/f961096"
                             android:tag="f961096"
-                            android:text='@{f961096.checked ? f961096x.getText().toString() : ""}'
+                            android:text="@={form.f961096x}"
                             android:visibility='@{f961096.checked? View.VISIBLE : View.GONE}' />
                     </LinearLayout>
                 </LinearLayout>
