--- a/app/src/main/res/layout/activity_section_f5_s2.xml
+++ b/app/src/main/res/layout/activity_section_f5_s2.xml
@@ -97,8 +97,8 @@
                         android:text="@={form.f5201}"
 
 
-                        app:minValue="1"
                         app:maxValue="100"
+                        app:minValue="1"
                         app:type="range" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
@@ -292,8 +292,8 @@
                         android:text="@={form.f5203y}"
 
 
-                        app:minValue="1"
                         app:maxValue="100"
+                        app:minValue="1"
                         app:type="range" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
@@ -328,8 +328,8 @@
                         android:text="@={form.f5204h}"
 
 
-                        app:minValue="1"
                         app:maxValue="100"
+                        app:minValue="1"
                         app:type="range" />
 
                     <TextView
@@ -347,8 +347,8 @@
                         android:text="@={form.f5204m}"
 
 
-                        app:minValue="1"
                         app:maxValue="100"
+                        app:minValue="1"
                         app:type="range" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
@@ -523,7 +523,8 @@
             <!-- f5208  Input-Numeric   -->
             <androidx.cardview.widget.CardView
                 android:id="@+id/fldGrpCVf5208"
-                style="@style/cardView">
+                style="@style/cardView"
+                android:visibility="@{form.f5207.equals(`1`)? View.GONE : View.VISIBLE}">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -559,8 +560,8 @@
                         android:text="@={form.f5208}"
 
 
-                        app:minValue="1"
                         app:maxValue="100"
+                        app:minValue="1"
                         app:type="range" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
@@ -604,8 +605,8 @@
                         android:text="@={form.f5209}"
 
 
-                        app:minValue="1"
                         app:maxValue="100"
+                        app:minValue="1"
                         app:type="range" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
@@ -649,8 +650,8 @@
                         android:text="@={form.f5210}"
 
 
-                        app:minValue="1"
                         app:maxValue="100"
+                        app:minValue="1"
                         app:type="range" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
@@ -817,7 +818,8 @@
             <!-- f5214  Input-Numeric   -->
             <androidx.cardview.widget.CardView
                 android:id="@+id/fldGrpCVf5214"
-                style="@style/cardView">
+                style="@style/cardView"
+                android:visibility="@{form.f5213.equals(`2`)? View.GONE : View.VISIBLE}">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -853,8 +855,8 @@
                         android:text="@={form.f5214}"
 
 
-                        app:minValue="1"
                         app:maxValue="100"
+                        app:minValue="1"
                         app:type="range" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
@@ -1589,8 +1591,8 @@
                         android:text="@={form.f5218}"
 
 
-                        app:minValue="1"
                         app:maxValue="100"
+                        app:minValue="1"
                         app:type="range" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
@@ -1715,165 +1717,171 @@
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
-            <!-- f5221  Radio   -->
-            <androidx.cardview.widget.CardView
-                android:id="@+id/fldGrpCVf5221"
-                style="@style/cardView">
+            <LinearLayout
+                android:id="@+id/fldGrpCVf522002"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:visibility="@{form.f5220.equals(`2`) ? View.GONE : View.VISIBLE}">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                <!-- f5221  Radio   -->
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/fldGrpCVf5221"
+                    style="@style/cardView">
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/bottom"
-                        android:orientation="horizontal">
+                        android:orientation="vertical">
 
-                        <TextView
-                            style="@style/quesNum"
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:text="@string/Q_f5221" />
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/bottom"
+                            android:orientation="horizontal">
 
-                        <TextView
-                            android:layout_width="0dp"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:text="@string/f5221" />
+                            <TextView
+                                style="@style/quesNum"
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:text="@string/Q_f5221" />
+
+                            <TextView
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="1"
+                                android:text="@string/f5221" />
+                        </LinearLayout>
+
+                        <RadioGroup
+                            android:id="@+id/f5221"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="12dp"
+                                android:text="@string/f5221note" />
+
+                            <RadioButton
+                                android:id="@+id/f5221w"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:checked="@{form.f5221.equals(``)}"
+                                android:onClick="@{()->form.setF5221(``)}"
+                                android:text="@string/f5221w" />
+
+                            <com.edittextpicker.aliazaz.EditTextPicker
+                                android:id="@+id/f5221wx"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:hint="@string/f5221w"
+                                android:inputType="number"
+                                android:maxLength="3"
+                                android:tag="f5221w"
+                                android:text="@={form.f5221wx}"
+
+                                android:visibility='@{f5221w.checked? View.VISIBLE : View.GONE}'
+
+                                app:maxValue="100"
+                                app:minValue="1"
+                                app:type="range" />
+
+                            <RadioButton
+                                android:id="@+id/f5221d"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:checked="@{form.f5221.equals(``)}"
+                                android:onClick="@{()->form.setF5221(``)}"
+                                android:text="@string/f5221d" />
+
+                            <com.edittextpicker.aliazaz.EditTextPicker
+                                android:id="@+id/f5221dx"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:hint="@string/f5221d"
+                                android:inputType="number"
+                                android:maxLength="3"
+                                android:tag="f5221d"
+                                android:text="@={form.f5221dx}"
+
+                                android:visibility='@{f5221d.checked? View.VISIBLE : View.GONE}'
+
+                                app:maxValue="100"
+                                app:minValue="1"
+                                app:type="range" />
+
+                            <RadioButton
+                                android:id="@+id/f522198"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:checked="@{form.f5221.equals(`98`)}"
+                                android:onClick="@{()->form.setF5221(`98`)}"
+                                android:text="@string/f522198" />
+                        </RadioGroup>
                     </LinearLayout>
+                </androidx.cardview.widget.CardView>
 
-                    <RadioGroup
-                        android:id="@+id/f5221"
+                <!-- f5222  Title   -->
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/fldGrpCVf5222"
+                    style="@style/cardView">
+
+                    <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="@string/f5222" />
 
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="12dp"
-                            android:text="@string/f5221note" />
+                            android:text="@string/f5222note" />
 
-                        <RadioButton
-                            android:id="@+id/f5221w"
+                        <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:checked="@{form.f5221.equals(``)}"
-                            android:onClick="@{()->form.setF5221(``)}"
-                            android:text="@string/f5221w" />
+                            android:text="@string/f5222w" />
 
                         <com.edittextpicker.aliazaz.EditTextPicker
-                            android:id="@+id/f5221wx"
+                            android:id="@+id/f5222w"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:hint="@string/f5221w"
+                            android:hint="@string/f5222w"
                             android:inputType="number"
                             android:maxLength="3"
-                            android:tag="f5221w"
-                            android:text="@={form.f5221wx}"
-
-                            android:visibility='@{f5221w.checked? View.VISIBLE : View.GONE}'
-
+                            android:text="@={form.f5222w}"
                             app:maxValue="100"
                             app:minValue="1"
                             app:type="range" />
 
-                        <RadioButton
-                            android:id="@+id/f5221d"
+                        <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:checked="@{form.f5221.equals(``)}"
-                            android:onClick="@{()->form.setF5221(``)}"
-                            android:text="@string/f5221d" />
+                            android:text="@string/f5222d" />
 
                         <com.edittextpicker.aliazaz.EditTextPicker
-                            android:id="@+id/f5221dx"
+                            android:id="@+id/f5222d"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:hint="@string/f5221d"
+                            android:hint="@string/f5222d"
                             android:inputType="number"
                             android:maxLength="3"
-                            android:tag="f5221d"
-                            android:text="@={form.f5221dx}"
+                            android:text="@={form.f5222d}"
 
-                            android:visibility='@{f5221d.checked? View.VISIBLE : View.GONE}'
 
                             app:maxValue="100"
                             app:minValue="1"
                             app:type="range" />
-
-                        <RadioButton
-                            android:id="@+id/f522198"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:checked="@{form.f5221.equals(`98`)}"
-                            android:onClick="@{()->form.setF5221(`98`)}"
-                            android:text="@string/f522198" />
-                    </RadioGroup>
-                </LinearLayout>
-            </androidx.cardview.widget.CardView>
-
-            <!-- f5222  Title   -->
-            <androidx.cardview.widget.CardView
-                android:id="@+id/fldGrpCVf5222"
-                style="@style/cardView">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/f5222" />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="12dp"
-                        android:text="@string/f5222note" />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/f5222w" />
-
-                    <com.edittextpicker.aliazaz.EditTextPicker
-                        android:id="@+id/f5222w"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="@string/f5222w"
-                        android:inputType="number"
-                        android:maxLength="3"
-                        android:text="@={form.f5222w}"
-
-
-                        app:minValue="1"
-                        app:maxValue="100"
-                        app:type="range" />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/f5222d" />
-
-                    <com.edittextpicker.aliazaz.EditTextPicker
-                        android:id="@+id/f5222d"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="@string/f5222d"
-                        android:inputType="number"
-                        android:maxLength="3"
-                        android:text="@={form.f5222d}"
-
-
-                        app:minValue="1"
-                        app:maxValue="100"
-                        app:type="range" />
-                </LinearLayout>
-            </androidx.cardview.widget.CardView>
+                    </LinearLayout>
+                </androidx.cardview.widget.CardView>
+            </LinearLayout>
 
             <!--EndButton LinearLayout-->
             <LinearLayout
